WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
260025
REGRESSION(
260575@main
): YouTube videos sometimes do not resize properly in fullscreen and theater modes
https://bugs.webkit.org/show_bug.cgi?id=260025
Summary
REGRESSION(260575@main): YouTube videos sometimes do not resize properly in f...
Andy Estes
Reported
2023-08-10 09:24:00 PDT
REGRESSION(
260575@main
): YouTube videos sometimes do not resize properly in fullscreen and theater modes
Attachments
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2023-08-10 09:24:07 PDT
<
rdar://problem/112780721
>
Andy Estes
Comment 2
2023-08-10 09:36:22 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/16565
EWS
Comment 3
2023-08-10 22:08:30 PDT
Committed
266807@main
(e1c50afade41): <
https://commits.webkit.org/266807@main
> Reviewed commits have been landed. Closing PR #16565 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug